--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" type="text/css" href="dep/normalize.css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="dep/Font-Awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/source-code-pro" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/source-sans-pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body lang="en">
     <section id="main">
