--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body lang="en">
     <section id="main">
       <header id="title">
-        <h1>John Doe</h1>
+        <h1>Pooya Abbaspour Shooshtari</h1>
         <span class="subtitle">Plaintiff, defendant &amp; witness</span>
       </header>
       <section class="main-block">
@@ -131,7 +131,7 @@
           </div>
           <div class="decorator">
           </div>
-          <div class="details">
+          <!-- <div class="details">
             <header>
               <h3>Massive Online Fee&ndash;Required Course (selective list)</h3>
             </header>
@@ -144,7 +144,7 @@
                 <li>Artificial politics</li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </section>
       </section>
     </section>
@@ -171,12 +171,11 @@
           
         </ul>
         <ul>
-          <li>Ordinarity</li>
+          <li>git</li>
           <li>No name rights</li>
         </ul>
       </div>
       <div class="side-block" id="disclaimer">
-        This r&eacute;sum&eacute; was wholly typeset with HTML/CSS &mdash; see <code>git.io/vVSYL</code>
       </div>
     </aside>
   </body>
