Removed the Abschluss from div header and moved

--- a/index.html
+++ b/index.html
@@ -105,13 +105,12 @@
           <div class="details">
             <header>
               <h3>Bachelor Studium Universität Shahid Chamran Ahvaz</h3>
-              <div>Abschluss: Bachelor Elektroingenieurwesen-kraft</div>
-              
+                            
             </header>
-            <div>President's Scholarship</div>
+            <div>Abschluss: Bachelor Elektroingenieurwesen-kraft</div>
           </div>
         </section>
-        <section class="blocks">
+        <!-- <section class="blocks">
           <div class="date">
             <span>2005</span><span>2009</span>
           </div>
@@ -125,8 +124,8 @@
             </header>
             <div>President's Scholarship</div>
           </div>
-        </section>
-        <section class="blocks">
+        </section> -->
+        <!-- <section class="blocks">
           <div class="date">
           </div>
           <div class="decorator">
@@ -145,7 +144,7 @@
               </ul>
             </div>
           </div> -->
-        </section>
+        <!-- </section> --> -->
       </section>
     </section>
     <aside id="sidebar">
