selection of education

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             </div>
           </div>
         </section>
-        <section class="blocks">
+        <section class="main-block concise">
           <h2>
-            <i class="fa fa-graduation-cap"></i> Education
+             <i class="fa fa-graduation-cap"></i> Education
           </h2>
           <div class="date">
             <span>03.2021</span><span>present </span>
